--- a/ageandgender-app/src/app/shared/header/header.component.html
+++ b/ageandgender-app/src/app/shared/header/header.component.html
@@ -1,10 +1,10 @@
 <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark indigo">
   <mdb-navbar-brand>
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Agen</a>
   </mdb-navbar-brand>
   <links>
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link waves-light" routerLink="/home" routerLinkActive="active" mdbWavesEffect>Home</a>
       </li>
       <li class="nav-item">
@@ -12,6 +12,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link waves-light" routerLink="/benchmarks" routerLinkActive="active" mdbWavesEffect>Benchmarks</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-light" routerLink="/about" routerLinkActive="active" mdbWavesEffect>About</a>
       </li>
     </ul>
   </links>
