completed presentation and added demo

--- a/ageandgender-app/src/app/home/home.component.html
+++ b/ageandgender-app/src/app/home/home.component.html
@@ -39,7 +39,7 @@
             <div class="col-10">
               <h5 class="feature-title">Results</h5>
               <p class="grey-text">The best accuracy for gender classification, during validation, is approximately
-                78,55%. The best accuracy for age classification, during validation, is approximately 40,55%</p>
+                79,1%. The best accuracy for age classification, during validation, is approximately 24,2%.</p>
             </div>
           </div>
 
